# DahDit

./: CMakeLists.txt  README.md  main.cpp  main.h
include/: config.h  diag.h  engine.h  interp.h  lexer.h  morse.h  morse_table.h  parser.h  symtab.h  util.h
src/: diag.c  engine.c  hello.morse  interp.c  lexer.c  main.c  morse.c  parser.c  symtab.c  util.c
tests/: hello.dit  hello_world.dit  operatior.dit  operator.dit  print_string.dit  print_twice.dit  variable.dit
